# pub-sub-log-aggregator-v2

./: README.md  docker-compose.yml
aggregator/: Dockerfile  pyproject.toml
aggregator/app/: config.py  consumer.py  database.py  main.py  models.py  routes.py
init-db/: init.sql
publisher/: Dockerfile  pyproject.toml
publisher/app/: __init__.py  config.py  generator.py  main.py
report/: apa_indonesia.csl  erd.mmd  refs.bib  report.typ  schema.dbml
report/template/: clean-acmart-indonesia.typ
tests/: conftest.py  pyproject.toml  test_api.py  test_concurrency.py  test_dedup.py  test_persistence.py  test_stress.py
