[project]
name = "aggregator"
version = "0.1.0"
description = "Log aggregator service for Pub-Sub system"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "asyncpg>=0.29.0",
  "redis>=5.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "httpx>=0.26.0",
  "asyncpg-stubs>=0.31.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "basedpyright>=1.18.0"]
