[project]
name = "publisher"
version = "0.1.0"
description = "Event publisher/generator for Pub-Sub Log Aggregator"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.26.0",
  "redis>=5.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "basedpyright>=1.18.0"]
